# winfuture

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yaml
src/: lib.rs
tests/: immediately_complete.rs
