[package]
name = "winfuture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = {version = "~0",features=["Foundation"]}
thiserror = "~1"

[dev-dependencies]
windows = {version = "~0", features = ["build"]}
kiruna = {git = "https://github.com/drewcrawford/kiruna", features =["test"]}